--- a/sass/layout/_team-sidebar.scss
+++ b/sass/layout/_team-sidebar.scss
@@ -25,15 +25,16 @@
     }
 
     .team-btn__content {
+        @include single-transition(all, .25s, ease);
+        @include opacity(.5);
+        @include border-radius(3px);
         background-color: alpha-color($black, .3);
+        overflow: hidden;
         height: 100%;
     }
 
     .team-btn {
-        @include clearfix;
         @include border-radius(4px);
-        @include single-transition(all, .25s, ease);
-        @include opacity(.5);
         border: 1px solid transparent;
         font-weight: bold;
         height: 44px;
@@ -46,7 +47,9 @@
         width: 44px;
 
         &:hover {
-            @include opacity(.8);
+            .team-btn__content {
+                @include opacity(.8);
+            }
         }
 
         .team-btn__image {
@@ -100,9 +103,8 @@
             }
 
             &.active {
-                .team-btn {
+                .team-btn__content {
                     @include opacity(1);
-                    background: transparent;
                 }
             }
 
@@ -110,13 +112,6 @@
                 border: none;
                 padding: 0;
                 text-decoration: none;
-            }
-
-            &.active {
-                .team-btn {
-                    background-color: transparent;
-                    @include opacity(1);
-                }
             }
 
             &.active:before {
